# news

./: .gitignore  README.es.md  README.fil.md  README.ja.md  README.md  experiment_title_match.py  moushiokuri-rename-future-titles.md  plan-rename-future-titles.md  references.txt
app/: README.md  pyproject.toml  update_pages.bat  update_pages.sh
app/data/: analytics.sqlite
app/migrations/: 01_rename_eli14_to_plain_language.py
app/skills/: apply_schema_edit.py  backfill_reasoning_trace.py  backfill_short_labels.py  build_evidence_reverse.py  citation_restriction_check.py  daily_flow_check.py  define_glossary_terms.py  extract_glossary_candidates.py  extract_needs.py  ingest_sourcedata.py  lint_markdown_clean.py  locale_fanout.py  migrate_to_sourcedata.py  post_update_validation.py  post_write_integrity.py  rename_future_titles.py  render_future_prediction_md.py  render_news_md.py  run_update_pages.py  sourcedata_schemas.py  super_backfill.py  validate_glossary_terms.py  weekly_maintenance.py
app/sourcedata/2026-04-19/: headlines.json  needs.json  news_section.json  predictions.json  readings.json  readings.prediction.4bd551bfc1cca138.json  readings.prediction.995feb039ef043c1.json  readings.prediction.c08481a657991ec8.json
app/sourcedata/2026-04-20/: change_log.json  headlines.json  needs.json  news_section.json  predictions.json  (+4 more)
app/src/: cli.py  db.py  export.py  glossary_link.py  ingest.py  schema.sql  score.py  timewindow.py
app/templates/: future_prediction.md.j2  news.md.j2
app/tests/: conftest.py  test_export.py  test_glossary_seed.py  test_ingest_sourcedata.py  test_news_parser.py  test_plain_language_quick_def_rename.py  test_prediction_parser.py  test_readings_backfill.py  test_rename_future_titles.py  test_render_roundtrip.py  test_scoring.py  test_super_backfill.py  test_weekly_maintenance.py
(+729 files in other folders)
